# test-scp

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  redis.py
backend/app/scrapers/: scrape_books.py  scrape_hn.py
backend/app/tests/: conftest.py  test_api.py
frontend/: .dockerignore  .env  Dockerfile  astro.config.mjs  entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: Chat.astro  ChatBubble.astro  ChatInput.astro  Features.astro  Header.astro  VirtualAssistant.vue
frontend/src/components/__tests__/: VirtualAssistant.spec.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: dom-selector.ts
frontend/src/pages/: index.astro
frontend/src/pages/api/: ask.json.ts
frontend/src/store/: index.ts
frontend/src/test/: setup.ts
frontend/src/utils/: api.test.ts  api.ts
workflows/: auth.json  init-workflows.sh  n8n_workflow.json
