[tool.poetry]
name = "ai-virtual-assistant-backend"
version = "0.1.0"
description = "Backend for AI Virtual Assistant"
authors = ["Oniel Gonzalez <oniel.gzlez@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pytest = "^7.4.3"
httpx = "^0.25.2"
redis = "^5.0.1"
selenium = "^4.18.1"
loguru = "^0.7.2"
aiohttp = "^3.9.3"
tenacity = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
addopts = "-p no:warnings"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 